# vpn-core

./: Cargo.toml  README.md  docker-compose.yml  vpn-core.toml
.github/workflows/: ci.yml
dev-server/: Cargo.toml  Dockerfile
dev-server/src/: main.rs
src/: config.rs  lib.rs
src/auth/: handlers.rs  mod.rs
src/backend/: async_core.rs  backend.rs  core.rs  grpc.rs  grpc_core.rs  grpc_trait.proto  http.rs  http_async.rs  mod.rs
src/custom_debug/: debug.rs
src/session/: manager.rs  mod.rs
src/wireguard/: config.rs  mod.rs
tests/: integration.rs  integration_async.rs
