[package]
name = "vpn-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "vpn_core"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["http-backend"]
http-backend = ["dep:reqwest", "dep:serde_json"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "2"
zeroize = { version = "1.8.2", features = ["derive"] }
cargo-sonar = "1.6.0"
