[package]
name = "vpn-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "vpn_core"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["http-async"]
http-backend = ["dep:reqwest", "dep:serde_json"]
testing = ["http-backend"]
config = ["dep:toml"]
http-async = ["dep:reqwest", "dep:serde_json", "dep:tokio"]
testing-async = ["http-async"]
grpc-backend = ["dep:tarpc"]


[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
tarpc = { version = "0.37.0", optional = true }
thiserror = "2"
zeroize = { version = "1.8.2", features = ["derive"] }
toml = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
