[package]
name = "dev-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dev-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
